# Crescent

./: .gitignore  CMakeLists.txt  CrescentConfig.h.in  README.md  android.sh  crescent.cxx  pubspec.yaml
android/: AndroidManifest.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/crescent/: MainActivity.kt
android/res/drawable/: icon.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart
lib/classes/: message.dart
lib/database/: connect_db.dart  docker-compose.yaml
lib/interface/: auth_page.dart  center_panel.dart  chat_page.dart  chats_panel.dart  home_page.dart  main_page.dart  rooms_panel.dart
lib/server/: db_credentials.dart  server.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
qml/: .qmlls.ini  AuthPage.qml  CMakeLists.txt  ChatPage.qml  HomePage.qml  QmlResources.qrc  main.qml
qml/components/: .qmlls.ini  CMakeLists.txt  ChatsList.qml  CrescentMenu.qml  CrescentMenuItem.qml  FormTextField.qml  Message.qml  NewsCard.qml  RoundedImage.qml
qml/pages/: AuthPage.qml  ChatPage.qml  HomePage.qml
resources/: Resources.qrc
resources/themes/: acid.json  dark.json  default.json  earth.json  ice.json  light.json  paper.json
src/: CMakeLists.txt  main.cpp
src/core/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  ChatManager.cpp  ChatManager.h  Log.h  LoginUser.cpp  LoginUser.h  Message.h  MessageManager.cpp  MessageManager.h  NetworkManager.cpp  NetworkManager.h  RestAPIManager.cpp  RestAPIManager.h  Theme.cpp  Theme.h  User.h  UserManager.cpp  UserManager.h
src/models/: CMakeLists.txt  ChatListModel.cpp  ChatListModel.h  ChatModel.cpp  ChatModel.h  MessageModel.cpp  MessageModel.h
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
